--- a/xFunc/Views/GraphsControl.xaml
+++ b/xFunc/Views/GraphsControl.xaml
@@ -16,6 +16,7 @@ limitations under the License. -->
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:views="clr-namespace:xFunc.Views"
+             xmlns:fluent="urn:fluent-ribbon"
              xmlns:res="clr-namespace:xFunc.Resources"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -39,11 +40,22 @@ limitations under the License. -->
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
                                         <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
                                     </Grid.ColumnDefinitions>
 
                                     <CheckBox Grid.Column="0" IsChecked="{Binding Path=IsChecked}" HorizontalAlignment="Center" VerticalAlignment="Center" Checked="graphItem_Toggle" Unchecked="graphItem_Toggle" />
                                     <TextBlock Grid.Column="1" Text="{Binding}" FontSize="14" Margin="4,0,0,0" />
-                                    <Button Grid.Column="2" Width="16" Height="16" Style="{StaticResource buttonStyle}" BorderThickness="0" Tag="{Binding}" Click="removeGraph_Click">
+                                    <fluent:DropDownButton Grid.Column="2" HorizontalAlignment="Left" SizeDefinition="Small">
+                                        <fluent:DropDownButton.Icon>
+                                            <Rectangle VerticalAlignment="Bottom" Height="16" Width="16" HorizontalAlignment="Center">
+                                                <Rectangle.Fill>
+                                                    <SolidColorBrush Color="{Binding Path=ChartColor, Mode=TwoWay}" />
+                                                </Rectangle.Fill>
+                                            </Rectangle>
+                                        </fluent:DropDownButton.Icon>
+                                        <fluent:ColorGallery IsAutomaticColorButtonVisible="False" IsNoColorButtonVisible="False" SelectedColor="{Binding Path=ChartColor, Mode=TwoWay}" />
+                                    </fluent:DropDownButton>
+                                    <Button Grid.Column="3" Width="16" Height="16" Style="{StaticResource buttonStyle}" BorderThickness="0" Tag="{Binding}" Click="removeGraph_Click">
                                         <Rectangle Fill="{StaticResource remove}" Width="10" Height="10" />
                                     </Button>
                                 </Grid>
