--- a/xFunc/Views/MainView.xaml
+++ b/xFunc/Views/MainView.xaml
@@ -149,32 +149,69 @@ limitations under the License. -->
                     </ribbon:Button>
                 </ribbon:RibbonGroupBox>
                 <ribbon:RibbonGroupBox x:Name="AnglesGroupBox"  Header="{x:Static res:Resource.AnglesGroupHeader}">
-                    <ribbon:ToggleButton x:Name="degreeButton" Header="{x:Static res:Resource.DegreeButtonHeader}" LargeIcon="../Images/DegreeLarge.png" SizeDefinition="Large" Command="views:MainView.DegreeCommand">
+                    <ribbon:ToggleButton x:Name="degreeButton" Header="{x:Static res:Resource.DegreeButtonHeader}" SizeDefinition="Large" Command="views:MainView.DegreeCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Deg</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
                         <ribbon:ToggleButton.ToolTip>
                             <ribbon:ScreenTip Title="{x:Static res:Resource.DegreeScreenTipTitle}" Text="{x:Static res:Resource.DegreeScreenTipText}" />
                         </ribbon:ToggleButton.ToolTip>
                     </ribbon:ToggleButton>
-                    <ribbon:ToggleButton x:Name="radianButton" Header="{x:Static res:Resource.RadianButtonHeader}" LargeIcon="../Images/RadianLarge.png" SizeDefinition="Large" Command="views:MainView.RadianCommand">
+                    <ribbon:ToggleButton x:Name="radianButton" Header="{x:Static res:Resource.RadianButtonHeader}" SizeDefinition="Large" Command="views:MainView.RadianCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Rad</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
                         <ribbon:ToggleButton.ToolTip>
                             <ribbon:ScreenTip Title="{x:Static res:Resource.RadianScreenTipTitle}" Text="{x:Static res:Resource.RadianScreenTipText}" />
                         </ribbon:ToggleButton.ToolTip>
                     </ribbon:ToggleButton>
-                    <ribbon:ToggleButton x:Name="gradianButton" Header="{x:Static res:Resource.GradianButtonHeader}" LargeIcon="../Images/GradianLarge.png" SizeDefinition="Large" Command="views:MainView.GradianCommand">
+                    <ribbon:ToggleButton x:Name="gradianButton" Header="{x:Static res:Resource.GradianButtonHeader}" SizeDefinition="Large" Command="views:MainView.GradianCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Grad</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
                         <ribbon:ToggleButton.ToolTip>
                             <ribbon:ScreenTip Title="{x:Static res:Resource.GradianScreenTipTitle}" Text="{x:Static res:Resource.GradianScreenTipText}" />
                         </ribbon:ToggleButton.ToolTip>
                     </ribbon:ToggleButton>
                 </ribbon:RibbonGroupBox>
                 <ribbon:RibbonGroupBox x:Name="OutputFormatGroupBox"  Header="{x:Static res:Resource.OutputFormatGroupHeader}">
-                    <ribbon:ToggleButton x:Name="autoButton" Header="{x:Static res:Resource.AutoFormatButtonHeader}" LargeIcon="../Images/Auto.png" SizeDefinition="Large" Command="views:MainView.AutoFormatCommand" />
-                    <ribbon:ToggleButton x:Name="normalButton" Header="{x:Static res:Resource.NormalFormatButtonHeader}" LargeIcon="../Images/Normal.png" SizeDefinition="Large" Command="views:MainView.NormalFormatCommand" />
-                    <ribbon:ToggleButton x:Name="exponentialButton" Header="{x:Static res:Resource.ExponentialFormatButtonHeader}" LargeIcon="../Images/Exponential.png" SizeDefinition="Large" Command="views:MainView.ExponentialFormatCommand" />
+                    <ribbon:ToggleButton x:Name="autoButton" Header="{x:Static res:Resource.AutoFormatButtonHeader}" SizeDefinition="Large" Command="views:MainView.AutoFormatCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Auto</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
+                    </ribbon:ToggleButton>
+                    <ribbon:ToggleButton x:Name="normalButton" Header="{x:Static res:Resource.NormalFormatButtonHeader}" SizeDefinition="Large" Command="views:MainView.NormalFormatCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Normal</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
+                    </ribbon:ToggleButton>
+                    <ribbon:ToggleButton x:Name="exponentialButton" Header="{x:Static res:Resource.ExponentialFormatButtonHeader}" SizeDefinition="Large" Command="views:MainView.ExponentialFormatCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Exp</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
+                    </ribbon:ToggleButton>
                 </ribbon:RibbonGroupBox>
                 <ribbon:RibbonGroupBox x:Name="AnswerBaseGroupBox" Header="{x:Static res:Resource.AnswerBaseGroupHeader}">
-                    <ribbon:ToggleButton x:Name="binButton" Header="Bin" LargeIcon="../Images/Bin.png" SizeDefinition="Large" Command="views:MainView.BinCommand" />
-                    <ribbon:ToggleButton x:Name="octButton" Header="Oct" LargeIcon="../Images/Oct.png" SizeDefinition="Large" Command="views:MainView.OctCommand" />
-                    <ribbon:ToggleButton x:Name="decButton" Header="Dec" LargeIcon="../Images/Dec.png" SizeDefinition="Large" Command="views:MainView.DecCommand" />
-                    <ribbon:ToggleButton x:Name="hexButton" Header="Hex" LargeIcon="../Images/Hex.png" SizeDefinition="Large" Command="views:MainView.HexCommand" />
+                    <ribbon:ToggleButton x:Name="binButton" Header="Binary" SizeDefinition="Large" Command="views:MainView.BinCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Bin</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
+                    </ribbon:ToggleButton>
+                    <ribbon:ToggleButton x:Name="octButton" Header="Octal" SizeDefinition="Large" Command="views:MainView.OctCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Oct</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
+                    </ribbon:ToggleButton>
+                    <ribbon:ToggleButton x:Name="decButton" Header="Decimal" SizeDefinition="Large" Command="views:MainView.DecCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Dec</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
+                    </ribbon:ToggleButton>
+                    <ribbon:ToggleButton x:Name="hexButton" Header="Hexadecimal" SizeDefinition="Large" Command="views:MainView.HexCommand">
+                        <ribbon:ToggleButton.LargeIcon>
+                            <TextBlock FontSize="16" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center">Hex</TextBlock>
+                        </ribbon:ToggleButton.LargeIcon>
+                    </ribbon:ToggleButton>
                 </ribbon:RibbonGroupBox>
                 <ribbon:RibbonGroupBox Header="{x:Static res:Resource.ExpListGroupHeader}">
                     <ribbon:Button Header="{x:Static res:Resource.DeleteExpButtonHeader}" Icon="../Images/Delete.png" LargeIcon="../Images/DeleteLarge.png" Command="views:MainView.DeleteExpCommand">
